tests/test_files_pa3/SemanticErrors/UnaryOpsBad2.ic
class A
{
	
	static void main(string[] args) { }

	void ints(int x)
	{
		string s;

		s = -x;

	}
}